# examples-py

./: .gitignore  README.md
batching/: .gitignore  pyproject.toml
batching/src/batching/: __init__.py
batching/tests/: conftest.py  test_batching_vs_no_batching.py
features/batching/: .gitignore  README.md  pyproject.toml
features/batching-benchmark/: README.md  pyproject.toml
features/batching-benchmark/src/batching/: __init__.py  __main__.py
features/batching-dst/: pyproject.toml
features/batching-dst/tests/: test_batching_vs_no_batching.py
features/batching/src/batching/: __init__.py
money-transfer/: .gitignore  ds.py  pyproject.toml
money-transfer/src/money_transfer/: __init__.py  basic.py  errors.py  idempontent_optimistic_locking_and_rollback.py  optimistic_locking.py  optimistic_locking_and_rollback.py  optimistic_rollback.py
money-transfer/tests/: conftest.py  test_money_transfer.py
prompt-checking/: .dmypy.json  README.md  pyproject.toml
prompt-checking/src/prompt_checking/: __init__.py  api.py  cli.py
prompt-checking/src/prompt_checking/testing/: __init__.py  mocks.py
prompt-checking/tests/: test_prompt_checking.py
quickstart/part-1/: README.md  pyproject.toml
quickstart/part-1/src/summarize/: app.py  gateway.py
quickstart/part-2/: README.md  pyproject.toml
quickstart/part-2/src/summarize/: app.py  gateway.py
quickstart/part-3/: README.md  pyproject.toml
quickstart/part-3/src/summarize/: app.py  gateway.py
quickstart/part-4/: pyproject.toml  request.json
quickstart/part-4/src/summarize/: app.py  gateway.py
quickstart/part-5/: motherfuckingwebsite.com.txt  pyproject.toml  request.json  www.dbos.dev.txt  www.gitpod.io-blog-we-are-leaving-kubernetes.txt  www.resonatehq.io.txt  www.restate.dev.txt
quickstart/part-5/src/summarize/: app.py  gateway.py
race-condition/: README.md  pyproject.toml  test.db
race-condition/src/race_condition/: __init__.py
race-condition/tests/: conftest.py  test_money_transfer.py  test_race_condition.py
use-cases/click-cli/: README.md  pyproject.toml
use-cases/click-cli/src/click_cli/: __init__.py  __main__.py
use-cases/django-webserver/: .gitignore  README.md  pyproject.toml
use-cases/django-webserver/src/: manage.py
use-cases/django-webserver/src/django_webserver/: asgi.py  settings.py  urls.py  views.py  wsgi.py
use-cases/fastapi-webserver/: README.md  pyproject.toml
use-cases/fastapi-webserver/src/fastapi_webserver/: __init__.py  __main__.py
use-cases/flask-webserver/: README.md  pyproject.toml
use-cases/flask-webserver/src/flask_webserver/: __init__.py  __main__.py
use-cases/human-in-the-loop/: README.md  pyproject.toml
use-cases/human-in-the-loop/src/human_in_the_loop/: confirmation_service.py  email.py  gateway.py  workflow.py  workflow_service.py  workflow_service_b.py
use-cases/money-transfer/: .gitignore  README.md
use-cases/money-transfer/src/money_transfer/: basic.py  idempotent_optimistic_locking.py  optimistic_locking_and_rollback.py
use-cases/prompt-checking/: .gitignore  pyproject.toml
use-cases/prompt-checking/src/prompt_checking/: __init__.py  cli.py  config.py
use-cases/prompt-checking/tests/: test_prompt_checking.py
use-cases/webserver/src/webserver/: __init__.py
webserver/: pyproject.toml
webserver/src/webserver/: __init__.py  __main__.py
