[project]
name = "webserver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.113.0",
    "resonate-sdk @ file:///Users/tomasperez/Documents/resonate/resonate-sdk-py",
]
requires-python = ">= 3.11"

[project.scripts]
"webserver" = "webserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webserver"]
