[project]
name = "batching"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }]
dependencies = ["resonate-sdk >= 0.1.33", "click>=8.1.7"]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"batching" = "batching:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/batching"]
