[project]
name = "click-cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "resonate-sdk>=0.1.32",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"click-cli" = "click_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/click_cli"]
