[project]
name = "django-webserver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
]
dependencies = [
    "django>=4.2.16",
    "resonate-sdk>=0.1.32",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"django-webserver" = "django_webserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_webserver"]
