[project]
name = "human-in-the-loop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cully Wakelin", email = "cully.wakelin@resonatehq.io" }
]
dependencies = [
    "resonate-sdk>=0.2.4",
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
    "workflow" = "human_in_the_loop.workflow:main"
    "gateway" = "human_in_the_loop.gateway:main"
    "email" = "human_in_the_loop.email:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/human_in_the_loop"]
